--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-hello world
+<html>
+<head>
+<title>Web</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+</head>
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<div style="position:absolute; left:0px; top:0px; width:1024px; height:768px;">
+	<div style="background-image:url(Website-Design-Rene-Fernandez_01.jpg); position:absolute; left:0px; top:0px; width:1024px; height:108px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_02.jpg); position:absolute; left:0px; top:108px; width:428px; height:660px;" title="">
+	</div>
+	<a href="index.html" style="cursor:hand">
+		<div style="background-image:url(Website-Design-Rene-Fernandez_03.jpg); position:absolute; left:428px; top:108px; width:91px; height:40px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_04.jpg); position:absolute; left:519px; top:108px; width:30px; height:660px;" title="">
+	</div>
+	<a href="about.html" style="cursor:hand">
+		<div style="background-image:url(Website-Design-Rene-Fernandez_05.jpg); position:absolute; left:549px; top:108px; width:80px; height:40px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_06.jpg); position:absolute; left:629px; top:108px; width:395px; height:597px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_07.jpg); position:absolute; left:428px; top:148px; width:91px; height:620px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_08.jpg); position:absolute; left:549px; top:148px; width:80px; height:620px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_09.jpg); position:absolute; left:629px; top:705px; width:24px; height:63px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_10.jpg); position:absolute; left:653px; top:705px; width:59px; height:63px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_11.jpg); position:absolute; left:712px; top:705px; width:312px; height:63px;" title="">
+	</div>
+</div>
+</body>
+</html>
