--- a/index.html
+++ b/index.html
@@ -5,30 +5,85 @@
 </head>
 <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 <div style="position:absolute; left:0px; top:0px; width:1024px; height:768px;">
-	<div style="background-image:url(Website-Design-Rene-Fernandez_01.jpg); position:absolute; left:0px; top:0px; width:1024px; height:108px;" title="">
+	<div style="background-image:url(Website-Design-Rene-Fernandez_01.jpg); position:absolute; left:0px; top:0px; width:1024px; height:11px;" title="">
 	</div>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_02.jpg); position:absolute; left:0px; top:108px; width:428px; height:660px;" title="">
+	<div style="background-image:url(Website-Design-Rene-Fernandez_02.jpg); position:absolute; left:0px; top:11px; width:901px; height:102px;" title="">
 	</div>
-	<a href="index.html" style="cursor:hand">
-		<div style="background-image:url(Website-Design-Rene-Fernandez_03.jpg); position:absolute; left:428px; top:108px; width:91px; height:40px;" title="">
+	<a href="renegadegator.blogspot.com" style="cursor:hand">
+		<div style="background-image:url(Blog.jpg); position:absolute; left:901px; top:11px; width:123px; height:37px;" title="">
 		</div></a>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_04.jpg); position:absolute; left:519px; top:108px; width:30px; height:660px;" title="">
+	<div style="background-image:url(Website-Design-Rene-Fernandez_04.jpg); position:absolute; left:901px; top:48px; width:123px; height:65px;" title="">
 	</div>
-	<a href="about.html" style="cursor:hand">
-		<div style="background-image:url(Website-Design-Rene-Fernandez_05.jpg); position:absolute; left:549px; top:108px; width:80px; height:40px;" title="">
+	<div style="background-image:url(Website-Design-Rene-Fernandez_05.jpg); position:absolute; left:0px; top:113px; width:437px; height:655px;" title="">
+	</div>
+	<a href="http://renegadegator.me/"
+		onmouseover="window.status='Renegade Gator';  return true;"
+		onmouseout="window.status='';  return true;" style="cursor:hand">
+		<div style="background-image:url(Home.jpg); position:absolute; left:437px; top:113px; width:76px; height:28px;" title="">
 		</div></a>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_06.jpg); position:absolute; left:629px; top:108px; width:395px; height:597px;" title="">
+	<div style="background-image:url(Website-Design-Rene-Fernandez_07.jpg); position:absolute; left:513px; top:113px; width:34px; height:655px;" title="">
 	</div>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_07.jpg); position:absolute; left:428px; top:148px; width:91px; height:620px;" title="">
+	<a href="http://renegadegator.me/about.html"
+		onmouseover="window.status='Renegade Gator';  return true;"
+		onmouseout="window.status='';  return true;" style="cursor:hand">
+		<div style="background-image:url(About.jpg); position:absolute; left:547px; top:113px; width:84px; height:28px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_09.jpg); position:absolute; left:631px; top:113px; width:22px; height:655px;" title="">
 	</div>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_08.jpg); position:absolute; left:549px; top:148px; width:80px; height:620px;" title="">
+	<a href="http://renegadegator.me/comics.html"
+		onmouseover="window.status='Renegade Gator';  return true;"
+		onmouseout="window.status='';  return true;" style="cursor:hand">
+		<div style="background-image:url(Comics.jpg); position:absolute; left:653px; top:113px; width:91px; height:28px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_11.jpg); position:absolute; left:744px; top:113px; width:19px; height:593px;" title="">
 	</div>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_09.jpg); position:absolute; left:629px; top:705px; width:24px; height:63px;" title="">
+	<a href="http://renegadegator.me/portfolio.html"
+		onmouseover="window.status='Renegade Gator';  return true;"
+		onmouseout="window.status='';  return true;" style="cursor:hand">
+		<div style="background-image:url(Portfolio.jpg); position:absolute; left:763px; top:113px; width:130px; height:28px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_13.jpg); position:absolute; left:893px; top:113px; width:15px; height:593px;" title="">
 	</div>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_10.jpg); position:absolute; left:653px; top:705px; width:59px; height:63px;" title="">
+	<a href="http://renegadegator.me/contact.html"
+		onmouseover="window.status='Renegade Gator';  return true;"
+		onmouseout="window.status='';  return true;" style="cursor:hand">
+		<div style="background-image:url(Website-Design-Rene-Fernandez_14.jpg); position:absolute; left:908px; top:113px; width:109px; height:28px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_15.jpg); position:absolute; left:1017px; top:113px; width:7px; height:655px;" title="">
 	</div>
-	<div style="background-image:url(Website-Design-Rene-Fernandez_11.jpg); position:absolute; left:712px; top:705px; width:312px; height:63px;" title="">
+	<div style="background-image:url(Website-Design-Rene-Fernandez_16.jpg); position:absolute; left:437px; top:141px; width:76px; height:627px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_17.jpg); position:absolute; left:547px; top:141px; width:84px; height:627px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_18.jpg); position:absolute; left:653px; top:141px; width:91px; height:564px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_19.jpg); position:absolute; left:763px; top:141px; width:130px; height:565px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_20.jpg); position:absolute; left:908px; top:141px; width:109px; height:565px;" title="">
+	</div>
+	<a href="https://www.youtube.com/user/RenegadeGator" style="cursor:hand">
+		<div style="background-image:url(Youtube.jpg); position:absolute; left:653px; top:705px; width:59px; height:63px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_22.jpg); position:absolute; left:712px; top:705px; width:32px; height:1px;" title="">
+	</div>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_23.jpg); position:absolute; left:712px; top:706px; width:14px; height:62px;" title="">
+	</div>
+	<a href="https://twitter.com/PS2Gator_" style="cursor:hand">
+		<div style="background-image:url(Twitter.jpg); position:absolute; left:726px; top:706px; width:59px; height:62px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_25.jpg); position:absolute; left:785px; top:706px; width:20px; height:62px;" title="">
+	</div>
+	<a href="http://renegadegator.tumblr.com" style="cursor:hand">
+		<div style="background-image:url(Tumblr.jpg); position:absolute; left:805px; top:706px; width:59px; height:62px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_27.jpg); position:absolute; left:864px; top:706px; width:19px; height:62px;" title="">
+	</div>
+	<a href="https://www.instagram.com/ps2gator/" style="cursor:hand">
+		<div style="background-image:url(Instagram.png); position:absolute; left:883px; top:706px; width:59px; height:62px;" title="">
+		</div></a>
+	<div style="background-image:url(Website-Design-Rene-Fernandez_29.jpg); position:absolute; left:942px; top:706px; width:75px; height:62px;" title="">
 	</div>
 </div>
 </body>
 </html>
+	
