--- a/comics.html
+++ b/comics.html
@@ -64,7 +64,7 @@
 	<div style="background-image:url(Website-Design-Rene-Fernandez_21.png); position:absolute; left:0px; top:229px; width:35px; height:539px;" title="">
 	</div>
 	<a href="http://boilsandthorns.thecomicseries.com/" style="cursor:hand">
-		<div style="background-image:url(Boils-and-Thorns.png); position:absolute; left:35px; top:229px; width:252px; height:91px;" title="">
+		<div style="background-image:url(Boils-and-Thornsthumb.png); position:absolute; left:35px; top:229px; width:252px; height:91px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_23.png); position:absolute; left:287px; top:229px; width:150px; height:539px;" title="">
 	</div>
