--- a/portfolio.html
+++ b/portfolio.html
@@ -62,17 +62,17 @@
 	<div style="background-image:url(Website-Design-Rene-Fernandez_21.png); position:absolute; left:0px; top:229px; width:52px; height:1271px;" title="">
 	</div>
 	<a href="http://renegadegator.me/experiments.png" style="cursor:hand">
-		<div style="background-image:url(Experiments.png); position:absolute; left:52px; top:229px; width:290px; height:196px;" title="">
+		<div style="background-image:url(Experimentsthumb.png); position:absolute; left:52px; top:229px; width:290px; height:196px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_23.png); position:absolute; left:342px; top:229px; width:26px; height:257px;" title="">
 	</div>
 	<a href="http://renegadegator.me/Lola.png" style="cursor:hand">
-		<div style="background-image:url(Lola.png); position:absolute; left:368px; top:229px; width:290px; height:196px;" title="">
+		<div style="background-image:url(Lolathumb.png); position:absolute; left:368px; top:229px; width:290px; height:196px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_25.png); position:absolute; left:658px; top:229px; width:25px; height:257px;" title="">
 	</div>
 	<a href="http://renegadegator.me/GoblinCave.png" style="cursor:hand">
-		<div style="background-image:url(Goblin-Cave.png); position:absolute; left:683px; top:229px; width:290px; height:196px;" title="">
+		<div style="background-image:url(Goblin-Cavethumb.png); position:absolute; left:683px; top:229px; width:290px; height:196px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_27.png); position:absolute; left:973px; top:229px; width:44px; height:1271px;" title="">
 	</div>
@@ -85,22 +85,22 @@
 	<div style="background-image:url(Website-Design-Rene-Fernandez_31.png); position:absolute; left:52px; top:486px; width:54px; height:1014px;" title="">
 	</div>
 	<a href="http://renegadegator.me/Sorcerer.png" style="cursor:hand">
-		<div style="background-image:url(Sorcerer.png); position:absolute; left:106px; top:486px; width:173px; height:237px;" title="">
+		<div style="background-image:url(Sorcererthumb.png); position:absolute; left:106px; top:486px; width:173px; height:237px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_33.png); position:absolute; left:279px; top:486px; width:39px; height:299px;" title="">
 	</div>
 	<a href="http://renegadegator.me/Barbarian.png" style="cursor:hand">
-		<div style="background-image:url(Barbarian.png); position:absolute; left:318px; top:486px; width:173px; height:237px;" title="">
+		<div style="background-image:url(Barbarianthumb.png); position:absolute; left:318px; top:486px; width:173px; height:237px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_35.png); position:absolute; left:491px; top:486px; width:37px; height:1014px;" title="">
 	</div>
 	<a href="http://renegadegator.me/Robot.png" style="cursor:hand">
-		<div style="background-image:url(Robot.png); position:absolute; left:528px; top:486px; width:173px; height:237px;" title="">
+		<div style="background-image:url(Robotthumb.png); position:absolute; left:528px; top:486px; width:173px; height:237px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_37.png); position:absolute; left:701px; top:486px; width:48px; height:353px;" title="">
 	</div>
 	<a href="http://renegadegator.me/FloridaMan.png" style="cursor:hand">
-		<div style="background-image:url(Florida-Man.png); position:absolute; left:749px; top:486px; width:173px; height:237px;" title="">
+		<div style="background-image:url(Florida-Manthumb.png); position:absolute; left:749px; top:486px; width:173px; height:237px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_39.png); position:absolute; left:922px; top:486px; width:51px; height:952px;" title="">
 	</div>
@@ -115,14 +115,14 @@
 	<div style="background-image:url(Website-Design-Rene-Fernandez_44.png); position:absolute; left:279px; top:785px; width:18px; height:715px;" title="">
 	</div>
 	<a href="http://renegadegator.me/Frog.png" style="cursor:hand">
-		<div style="background-image:url(Frog.png); position:absolute; left:297px; top:785px; width:176px; height:292px;" title="">
+		<div style="background-image:url(Frogthumb.png); position:absolute; left:297px; top:785px; width:176px; height:292px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_46.png); position:absolute; left:473px; top:785px; width:18px; height:715px;" title="">
 	</div>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_47.png); position:absolute; left:528px; top:839px; width:27px; height:661px;" title="">
 	</div>
 	<a href="http://renegadegator.me/Alien.png" style="cursor:hand">
-		<div style="background-image:url(Alien.png); position:absolute; left:555px; top:839px; width:157px; height:186px;" title="">
+		<div style="background-image:url(Alienthumb.png); position:absolute; left:555px; top:839px; width:157px; height:186px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez_49.png); position:absolute; left:712px; top:839px; width:37px; height:599px;" title="">
 	</div>
