--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</div>
 	<div style="background-image:url(Website-Design-Rene-Fernandez-HOME_02.png); position:absolute; left:0px; top:11px; width:901px; height:102px;" title="">
 	</div>
-	<a href="renegadegator.blogspot.com" style="cursor:hand">
+	<a href="http://renegadegator.blogspot.com/" style="cursor:hand">
 		<div style="background-image:url(Blog.png); position:absolute; left:901px; top:11px; width:123px; height:37px;" title="">
 		</div></a>
 	<div style="background-image:url(Website-Design-Rene-Fernandez-HOME_04.png); position:absolute; left:901px; top:48px; width:123px; height:65px;" title="">
